# PKGui

./: .travis.yml  CMakeLists.txt  CryptoNoteWallet.cmake  README.md  build.sh  changes.lst
src/: CurrencyAdapter.cpp  CurrencyAdapter.h  Settings.cpp  WalletAdapter.cpp  main.cpp
src/gui/: DepositsFrame.cpp  MainWindow.cpp  OverviewFrame.cpp  OverviewFrame.h  SendFrame.cpp  SendFrame.h  SendMessageFrame.cpp  TransactionsModel.cpp
src/gui/ui/: aboutdialog.ui  addressbookdialog.ui  addressbookframe.ui  changepassworddialog.ui  depositsframe.ui  importsecretkeys.ui  importseed.ui  mainwindow.ui  messageaddressframe.ui  messagesframe.ui  miningframe.ui  newpassworddialog.ui  overviewframe.ui  receiveframe.ui  sendframe.ui  sendmessageframe.ui  showqrcode.ui  transactionframe.ui  transactionsframe.ui  transferframe.ui  welcomeframe.ui
